
 - Add ability to toggle between showing shorter dates (without time
   info) and relative dates. Use 'D' to toggle between date formats.
 - Show the active (instead of the default) keybindings in the help
   view. Furthermore, honor the keymap when suggesting actions in the
   help messages.
 - Add branch view for choosing which branch to display in the main
   view. Bound to 'H' by default.
 - Tree view: sort entries by name, date or author. Toggling is bound to
   'i' by default, with 'I' controlling whether or not to sort in
   ascending order.
 - Make height of the lower view in a split view configurable by setting
   the 'split-view-height' variable to a number or a percentage.
   Defaults to 2/3 of the total view height.
 - Allow multiple text attributes for color commands:

	color cursor white blue underline bold

Bug fixes:

 - Tree view: fix searching.

tig-0.14.1
----------

Improvements:

 - Status view: improve "on branch" information inspired by the prompt
   code in git's bash completion script.
 - Colors for 256-capable terminals can be specified as colorN.
 - Entering a number in the prompt will jump to that line number.
 - Handle core.worktree by setting GIT_DIR and GIT_WORK_TREE.
 - Make behavior of horizontal scrolling configurable by setting the
   'horizontal-scroll' variable to a number or a percentage. Defaults to
   scrolling 50% of the view width.

Bug fixes:

 - Status view: show error when failing to open a file.
 - Status view: report failures to update a file.
 - Blame view: fix problem with uninitialized variable.
 - Blame view: use line number information when loading blame for
   specific commit.
 - Fix handling of quoted strings in the config file.
 - Fix horizontal scrolling glitches.

tig-0.14
--------

Incompatibilities:

 - The screen-resize action has been deprecated. It had no real use for
   users and was never meant to be exposed.
 - The "tree-parent" action was renamed to "parent". Warnings will be